--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="about.html">About me</a></li>
+											<li><a href="about.html">About</a></li>
 											<li><a href="projects.html">Project library</a></li>
 										</ul>
 									</div>
