--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <!-- Knock Knock! -->
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/knockPoster.png" alt="" /></div><div class="content">
 								<h2>Knock Knock!</h2>
 								<p>An online multiplayer video game for players of all ages</p>
 								<h6 style="color:#C2423B;"> still in development </h6>
