--- a/tcoh.html
+++ b/tcoh.html
@@ -49,8 +49,15 @@ src="https://www.youtube.com/embed/dbR4qcpMlRM" frameborder="0" allowfullscreen 
 </iframe>
 
 
-
-        <h3> Sw </h3>
+<br>
+        <h3> Download links </h3>
+        <ul class="actions stacked">
+          <li><a href="downloads/Setup.exe" download>Windows (64 bit)</a></li>
+            <li><a href="downloads/TCoHMacapp.zip" download>Mac OS</a></li>
+        </ul>
+        <br><br>
+        <h4> References and more information </h4>
+        <p>Available on request.</p>
         </div>
       </section>
   </article>
