--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
 						<!-- Other -->
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/list.png" alt="" /></div><div class="content">
 								<h2>Other projects</h2>
 								<p>Explore the full library of my other projects<br />
-								And feel free to submit your ideas of any kind!</p>
+								And feel free to submit your own ideas of any kind!</p>
 								<ul class="actions stacked">
 									<li><a href="library.html" class="button fit">Learn More</a></li>
 								</ul>
@@ -109,11 +109,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/Rokas89763312?s=09" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/rokas.sertvytis" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/rokascbm/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.linkedin.com/in/rokas-šertvytis-2a9a47184/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto: rokassertvytisall@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Rokas Sertvytis</li>
