--- a/about.html
+++ b/about.html
@@ -33,9 +33,32 @@
   <header>
     <h2>About Me</h2>
     </header>
-    <section class="wrapper style5">
+    <section class="wrapper style6">
       <div class="inner">
-        <h3> Sw </h3>
+
+        <div class="image">
+          <img src="images/profilephoto.png" alt="Profile Photo" />
+        </div>
+        <div class="rightpanel">
+          <h4>Rokas Šertvytis</h4>
+          <p><i>Hi! I‘m really happy that you came this far to learn more about me, so here it is...</i></p>
+          <p>I don‘t really like to talk a lot about myself (at least in a positive way), I would much rather hear about you and how life‘s treating you, but since this is my website, it‘s your turn to listen (actually read).<br> I like to think of myself as a humble person with an understanding of the importance of never-ending proccess of educating myself and a very open mind to new ideas no matter how weird they might sound at the beginning. I studied Computer Science at the University of Essex where I found my true passion to use my knowledge and the available tools to solve some of my problems (or at least inconveniences). The understanding of how programming and software development works allowed me to begin realising my ideas. While I worked on many different types of software which had very different purposes, I found games development the most appealing to me. Video games can be used as a tool to tell your story, the same as movies or books, but interactive. This really motivated me to develop a game in my final year at the university and later to write a dissertation about it. Furthermore, this project motivated me to begin learning more about psychology, since the game was about fighting your addictions, as I had to discuss this topic in my research. Hence, my interest in psychology and how I could help others with my computing knowdelge just keeps on growing. Finally, my dream is to make this life thing as meaningful as I can by helping others and keeping an open-mind.
+<br>
+<br>
+Feel free to message me on any of the social platforms listed at the bottom of the each page.
+</p>
+        </div>
+
+
+        <!--
+        <div class="leftpanel">
+          <img src="images/profilephoto.png" alt="Profile Photo" />
+        </div>
+        <div class="rightpanel">
+        <h4>  Rokas Šertvytis </h4>
+      </div>
+            -->
+
         </div>
       </section>
   </article>
@@ -43,13 +66,16 @@
   <!-- FOOTER -->
   <footer id="footer">
     <ul class="icons">
+      <li><a href="https://twitter.com/Rokas89763312?s=09" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
       <li><a href="https://www.facebook.com/rokas.sertvytis" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+      <li><a href="https://www.instagram.com/rokascbm/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
       <li><a href="https://www.linkedin.com/in/rokas-šertvytis-2a9a47184/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-      </ul>
-      <ul class="copyright">
-        <li>&copy; Rokas Sertvytis</li>
-        </ul>
-    </footer>
+      <li><a href="mailto: rokassertvytisall@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+    </ul>
+    <ul class="copyright">
+      <li>&copy; Rokas Sertvytis</li>
+    </ul>
+  </footer>
 
   </div>
 
