--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<h2>Welcome</h2>
 							<p>Scroll down for information<br />
 							about my projects<br />
-							or press the button to learn more about me</p>
+							or press the button below to learn more about me</p>
 							<ul class="actions special">
 								<li><a href="about.html" class="button primary">About</a></li>
 							</ul>
