--- a/knock.html
+++ b/knock.html
@@ -37,7 +37,7 @@
     </header>
     <section class="wrapper style5">
       <div class="inner">
-        <h3> Sw </h3>
+        <p>The game is still in development, so there's not much to show at the moment. Feel free to message me if you want to learn more about my ideas for this project</p>
         </div>
       </section>
   </article>
@@ -45,13 +45,16 @@
   <!-- FOOTER -->
   <footer id="footer">
     <ul class="icons">
+      <li><a href="https://twitter.com/Rokas89763312?s=09" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
       <li><a href="https://www.facebook.com/rokas.sertvytis" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+      <li><a href="https://www.instagram.com/rokascbm/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
       <li><a href="https://www.linkedin.com/in/rokas-šertvytis-2a9a47184/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-      </ul>
-      <ul class="copyright">
-        <li>&copy; Rokas Sertvytis</li>
-        </ul>
-    </footer>
+      <li><a href="mailto: rokassertvytisall@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+    </ul>
+    <ul class="copyright">
+      <li>&copy; Rokas Sertvytis</li>
+    </ul>
+  </footer>
 
   </div>
 
