--- a/library.html
+++ b/library.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title>The Creature of Habit Project</title>
+<title>Knock Knock</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="assets/css/main.css" />
@@ -31,33 +31,12 @@
 <!-- MAIN -->
 <article id="main">
   <header>
-    <h2>The Creature of Habit</h2>
-    <p>A video game developed as a final year project<br />
-    at the University of Essex</p>
+    <h2>Project library</h2>
     </header>
     <section class="wrapper style5">
       <div class="inner">
-
-        <h3> Abstract </h3>
-        <p>The Creature of Habit is an action game (prefer to call it an interactive story) about a 21st-century hero myth of an underachieving individual entrenched in bad habits who learns the value of breaking psychological chains through an encounter with the mystical. The game consists of three completely different levels and cutscenes in between. Each level represents a different addiction where the player has to get rid of them by completing the level. A concept such as this is difficult to explain by only creating playable levels, therefore all levels are surrounded by cutscenes which explain the meaning of the game. The timeline of the game is a single day in which the player will control a character called Creature. The story begins with an introduction of the character. Creature faces a problem that forces him to step out of his comfort zone and then, with the help of a magical substance, he finds the courage to detect and fight his inner problems - Bad Habits.
-<br /><br>The idea of the game came from observations of modern society where some people are unaware of the dangers of routine and bad habits. Both problems are represented by different characters. The main character mainly represents the fight with addictions, while his mortal enemy named Rollo represents how someone being completely unaware can miss out on important aspects of life only because of a comfortable routine.
-</p>
-
-
-        <iframe class="centerVideo" width="560" height="315"
-src="https://www.youtube.com/embed/dbR4qcpMlRM" frameborder="0" allowfullscreen >
-</iframe>
-
-
-<br>
-        <h3> Download links </h3>
-        <ul class="actions stacked">
-          <li><a href="downloads/Setup.exe" download>Windows (64 bit)</a></li>
-            <li><a href="downloads/TCoHMacapp.zip" download>Mac OS</a></li>
-        </ul>
-        <br><br>
-        <h4> References and more information </h4>
-        <p>Available on request.</p>
+        <p>Here should be a list of other projects that I have done, but for now I hope a link to my GitHub page will be enough..</p>
+        <a href="https://github.com/SertvytisRokas/">GitHub</a>
         </div>
       </section>
   </article>
